syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";
import "asset.proto";

option java_package = "com.cognite.beam.io.dto";
option java_multiple_files = true;

message AssetLookup {

    int64 id = 1;
    google.protobuf.StringValue external_id = 2;
    string name = 3;
    google.protobuf.Int64Value parent_id = 4;
    google.protobuf.StringValue parent_external_id = 5;
    google.protobuf.StringValue description = 6;
    google.protobuf.Int64Value root_id = 7;
    google.protobuf.Int64Value created_time = 8;
    google.protobuf.Int64Value last_updated_time = 9;
    map<string, string> metadata = 10;
    repeated string labels = 11;

    google.protobuf.StringValue source = 12;
    google.protobuf.StringValue root_name = 13;
    google.protobuf.Int64Value data_set_id = 14;

    Asset.Aggregates aggregates = 15;
}
