syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message Event {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue external_id = 2;
    google.protobuf.Int64Value start_time = 3;
    google.protobuf.Int64Value end_time = 4;
    google.protobuf.StringValue description = 5;
    google.protobuf.StringValue type = 6;
    google.protobuf.StringValue subtype = 7;
    repeated int64 asset_ids = 8;
    google.protobuf.Int64Value created_time = 9;
    google.protobuf.Int64Value last_updated_time = 10;
    map<string, string> metadata = 11;

    google.protobuf.StringValue source = 13;
    google.protobuf.Int64Value data_set_id = 14;
}
